--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
 memory-profiler==0.61.0
+numpy==1.26.4
+pandas==2.2.1
+pip==23.2
+psutil==5.9.8
+py-spy==0.3.14
+python-dateutil==2.9.0.post0
+pytz==2024.1
+setuptools==68.1.2
+six==1.16.0
+tzdata==2024.1
+
